Bug 500324: 'Open' button in download manager doesn't correctly launch the file in it's viewer, r=bsmedberg, blassey